using nv-websocket-client for websockets